force-app/main/default/objects/Interface_Error_Line__c/Interface_Error_Line__c.object-meta.xml
<CustomObject>
    <description>Object to track any error while syncing of data while external API Callout.</description>
    <label>Interface Error Line</label>
    <nameField>
        <displayFormat>IEL-{0000}</displayFormat>
        <label>Interface Error Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Error Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>