force-app/main/default/objects/Interface_Error_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account for which there is an error in Callout.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>