force-app/main/default/objects/Interface_Error_Line__c/fields/API_Synchronization_Item__c.field-meta.xml
<CustomField>
    <fullName>API_Synchronization_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>API Synchronization Item for which error received during API callout.</description>
    <label>API Synchronization Item</label>
    <referenceTo>API_Synchronization_Item__c</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>