force-app/main/default/objects/Interface_Error_Line__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact for which there is an error in Callout.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>