force-app/main/default/objects/Interface_Error_Line__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Credit Note for which there is an error in Callout.</description>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>