force-app/main/default/objects/Interface_Error_Line__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>HTTP response code of API callout.</description>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>