force-app/main/default/objects/Interface_Error_Line__c/fields/IMCC_API_Synchronization_Item__c.field-meta.xml
<CustomField>
    <fullName>IMCC_API_Synchronization_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IMCC API Synchronization Item for which error received during API callout.</description>
    <label>IMCC API Synchronization Item</label>
    <referenceTo>IMCC_API_Synchronization_Item__c</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>