force-app/main/default/objects/Interface_Error_Line__c/fields/Interface_Log__c.field-meta.xml
<CustomField>
    <fullName>Interface_Log__c</fullName>
    <description>Interface log to which this log line will be associated.</description>
    <label>Interface Log</label>
    <referenceTo>Interface_Log__c</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>