force-app/main/default/objects/Interface_Error_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Invoice for which there is an error in Callout.</description>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Interface Error Lines</relationshipLabel>
    <relationshipName>Interface_Error_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>