force-app/main/default/objects/Interface_Error_Line__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Object name for which error received during API callout.</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>