force-app/main/default/objects/Interface_Error_Line__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>SF Record Id with error</description>
    <label>Record Id</label>
    <type>Url</type>
</CustomField>