force-app/main/default/objects/Interface_Error_Line__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <description>URL of record for which error received during API callout.</description>
    <formula>IF( NOT(ISBLANK(Account__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Account__c ,
IF( NOT(ISBLANK(Contact__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Contact__c,
IF( NOT(ISBLANK(Credit_Note__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Credit_Note__c,
IF( NOT(ISBLANK(Invoice__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Invoice__c,
IF( NOT(ISBLANK(API_Synchronization_Item__r.Order__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + API_Synchronization_Item__r.Order__c, 
IF( NOT(ISBLANK(API_Synchronization_Item__r.Invoice__c)) , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + API_Synchronization_Item__r.Invoice__c,&apos;&apos;)
)))))</formula>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>